--- a/site_root.html
+++ b/site_root.html
@@ -1,7 +1,7 @@
 {% load actionkit_tags %}
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=https://peoplepower.org/">
+<meta http-equiv="refresh" content="0;url=https://battleforthenet.com/">
 </head>
 <body>
 </body>
