Make sure all templates are correct in AK

--- a/event_email_attendee_removed.html
+++ b/event_email_attendee_removed.html
@@ -5,6 +5,7 @@ Subject: You have been removed from your "{{campaign_title}}" event
 
 <!-- Replacement for unsubscribe. -->
 <p><small>
-    You received this message because you were signed up for an event.  
+    You received this message because you were signed up for an event.
     You won't receive any more messages about this event.
-</small></p>
+</small>
+</p>
