--- a/event_email_created.html
+++ b/event_email_created.html
@@ -13,4 +13,5 @@ Subject: Confirm your "{{ action.event.campaign.local_title }}" event
 <p>Thanks again!</p>
 
 <!-- Replacement for unsubscribe -->
-<p><small>You're receiving this message because you set up a "{{ action.event.campaign.local_title }}" event.  If you don't want to receive further emails about this event, you can cancel the event using the host tools linked above.</small></p>
+<p><small>You're receiving this message because you set up a "{{ action.event.campaign.local_title }}" event.  If you don't want to receive further emails about this event, you can cancel the event using the host tools linked above.</small>
+</p>
