--- a/event_email_from_admin.html
+++ b/event_email_from_admin.html
@@ -9,6 +9,7 @@ Subject: {{subject}}
 
 <!-- Replacement for unsubscribe. -->
 <p><small>
-    You're receiving this message because you're signed up for an event.  
+    You're receiving this message because you're signed up for an event.
     You can use your event tools, linked above, to cancel your signup and quit receiving these messages.
-</small></p>
+</small>
+</p>
