--- a/event_email_role_changed.html
+++ b/event_email_role_changed.html
@@ -7,6 +7,7 @@ Subject: You are now a {{new_role}} of your "{{campaign_title}}" event
 
 <!-- Replacement for unsubscribe. -->
 <p><small>
-    You're receiving this message because you're signed up for an event.  
+    You're receiving this message because you're signed up for an event.
     You can use your event tools, linked above, to cancel your signup and quit receiving these messages.
-</small></p>
+</small>
+</p>
