--- a/event_email_from_attendee.html
+++ b/event_email_from_attendee.html
@@ -11,6 +11,7 @@ Subject: Your "{{campaign_title}}" attendee sent you a message
 
 <!-- Replacement for unsubscribe. -->
 <p><small>
-    You're receiving this message because you're signed up for an event.  
+    You're receiving this message because you're signed up for an event.
     You can use the link above to cancel your signup and quit receiving these messages.
-</small></p>
+</small>
+</p>
