--- a/site_404.html
+++ b/site_404.html
@@ -1,8 +1,7 @@
-<html> 
-<body> 
+<html>
+<body>
 <p>
-    Sorry, the URL you tried to load doesn't exist.  Check that it's typed
-correctly.
-</p> 
-</body> 
-</html> 
+    Sorry, the URL you tried to load doesn't exist.  Check that it's typed correctly.
+</p>
+</body>
+</html>
