A bunch of updates to make the templates for Team Internet

--- a/event_email_cancelled.html
+++ b/event_email_cancelled.html
@@ -47,7 +47,7 @@ Subject: {% if user.id == event.creator.id and "moderation_not_approved"|is_in:e
 
 <p>You can search for other events here:</p>
 
-<p><a href="https://map.peoplepower.org/">map.peoplepower.org</a></p>
+<p><a href="https://events.battleforthenet.com/">events.battleforthenet.com</a></p>
 {% endif %}
 
 <!-- Replacement for unsubscribe. -->
