--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 {% if signup and not event.is_inactive %}
-<img class="conversion" alt="" width="0" height="0" src="https://ms.clicks.actions.aclu.org/conversion?version=1&conversion_items=1&conversion_value=0">
-<!-- Title -->
+<!-- <img class="conversion" alt="" width="0" height="0" src="https://ms.clicks.actions.aclu.org/conversion?version=1&conversion_items=1&conversion_value=0">
+ --><!-- Title -->
 <!-- Sidebar -->
 <script>
   function scrollToAnchor(aid){
@@ -60,9 +60,9 @@
 	<div class="event-share">
 		<div class="subA">Share</div>
 
-    <div class="thanks-share-fb"><a class="buttonA3 icon-fb" href="https://www.facebook.com/sharer/sharer.php?u=https://go.peoplepower.org/event/{{ campaign.local_name }}/{{event.id}}/signup/?source=fbshare" target="_blank"><span class="box"><span class="icon"></span>Post to Facebook</a></span></div>
+    <div class="thanks-share-fb"><a class="buttonA3 icon-fb" href="https://www.facebook.com/sharer/sharer.php?u=https://act.demandprogress.org/event/{{ campaign.local_name }}/{{event.id}}/signup/?source=fbshare" target="_blank"><span class="box"><span class="icon"></span>Post to Facebook</a></span></div>
 
-    <div class="thanks-share-twitter"><a class="buttonA3 icon-twitter" href="https://twitter.com/home?status=Join%20me%20for%20an%20%40ACLU%20People%20Power%20Action%20Event%20in%20{{ event.city_etc_no_postal }}%20https%3A//go.peoplepower.org/event/{{campaign.local_name}}/{{event.id}}/signup/?source=twshare" target="_blank"><span class="box"><span class="icon"></span>Share on Twitter</a></span></div>
+    <div class="thanks-share-twitter"><a class="buttonA3 icon-twitter" href="https://twitter.com/home?status=Join%20me%20for%20a%20%40Team%20Internet%20Event%20in%20{{ event.city_etc_no_postal }}%20https%3A//act.demandprogress.org/event/{{campaign.local_name}}/{{event.id}}/signup/?source=twshare" target="_blank"><span class="box"><span class="icon"></span>Share on Twitter</a></span></div>
 
 	</div> <!-- .event-share -->
 </div> <!-- col6 -->
