--- a/wrapper.html
+++ b/wrapper.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <script>startTime=new Date()</script>
-    <meta name="application-name" content="People Power"/>
+    <meta name="application-name" content="Team Internet"/>
 
     <link rel="shortcut icon" type="image/x-icon" href="https://peoplepower.org/assets/favicon.ico" />
     <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-196x196.png" sizes="196x196" />
@@ -12,16 +12,16 @@
     <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="People Power"/>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     {% if event.is_open_for_signup %}
-		<title>People Power Action Event in {{ event.city_etc_no_postal }}</title>
+		<title>Team Internet Event in {{ event.city_etc_no_postal }}</title>
 		<meta property="og:image" content="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepower-rsvpsocial.png" />
-		<meta property="og:title" content="Join a People Power Action Event in {{ event.city_etc_no_postal }}" />
-		<meta name="description" property="og:description" content="We're organizing grassroots volunteers to fight against the worst abuses of the Trump administration.">
-		<meta property="og:site_name" content="PeoplePower.org">
+		<meta property="og:title" content="Join a Team Internet Event in {{ event.city_etc_no_postal }}" />
+		<meta name="description" property="og:description" content="The FCC wants to destroy net neutrality and give giant cable companies control over the Internet.">
+		<meta property="og:site_name" content="battleforthenet.com">
 		<meta name="twitter:card" value="summary_large_image">
     {% else %}
 		<title>{% block title %}{{ page.title }} | {% filter ak_text:"org_name" %}{% client_name %}{% endfilter %}{% endblock %}</title>
@@ -33,8 +33,8 @@
 		<meta property="og:type" content="article">
 		<meta name="twitter:card" value="summary_large_image">
     {% endif %}
-    <meta name="twitter:site" content="@ACLU">
-    <meta name="twitter:creator" content="@ACLU">
+<!--     <meta name="twitter:site" content="@ACLU">
+    <meta name="twitter:creator" content="@ACLU"> -->
     {% block meta_additions %}{% endblock %}
 
     {% load_css %}
@@ -64,7 +64,7 @@
 
     <div class="ak-page-header">
         <div class="ak-page-header-contents">
-            <img src="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepowerlogo.svg" alt="People Power" />
+            <img src="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepowerlogo.svg" alt="Team Internat" />
             <div class="ak-page-nav"></div>
         </div>
     </div>
@@ -75,14 +75,14 @@
 
         <div class="ak-page-footer">
             <div class="ak-page-footer-contents">
-<a href="https://www.aclu.org/" class="footer-pp-logo"><img src="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepowerlockup.svg" alt="People Power | ACLU" /></a>
+<a href="https://www.aclu.org/" class="footer-pp-logo"><img src="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepowerlockup.svg" alt="Team Internet" /></a>
 <div class="footer-fineprint">
 <span>{% ifequal page.type "Unsubscribe" %}By submitting this form, you will be unsubscribed from People Power.{% else %}
 {% if not filename|split:'.'|nth:0 = "thanks" %}
-By submitting this form, you are agreeing to receive periodic updates from People Power and other ACLU channels.
+By submitting this form, you are agreeing to receive periodic updates from Demand Progress, Fight for the Future and Free Press.
 {% endif %}
 {% endifequal %}</span>
-<span>Contact us at <a href="mailto:info@peoplepower.org">info@peoplepower.org</a>.<br><a href="https://go.peoplepower.org/signup/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
+<span>Contact us at <a href="mailto:team@fightforthefuture.org">team@fightforthefuture.org</a>.<br><a href="https://battleforthenet.com/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
 </div> <!-- .footer-fineprint -->
 </div> <!-- ak-page-footer-contents -->
 </div> <!-- .ak-page-footer -->
@@ -135,7 +135,7 @@ By submitting this form, you are agreeing to receive periodic updates from Peopl
   s.pageName='"' + location.pathname + '"';
   s.prop4="Page";
   s.prop5='"' + location.pathname + '"';
-  s.prop12="go.peoplepower.org";
+  s.prop12="act.demandprogress.org";
   /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
   var s_code=s.t();if(s_code)document.write(s_code)//-->
 </script>
