Little bit of wrapper cleanup and url update

--- a/wrapper.html
+++ b/wrapper.html
@@ -21,7 +21,7 @@
 		<meta property="og:image" content="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepower-rsvpsocial.png" />
 		<meta property="og:title" content="Join a Team Internet Event in {{ event.city_etc_no_postal }}" />
 		<meta name="description" property="og:description" content="The FCC wants to destroy net neutrality and give giant cable companies control over the Internet.">
-		<meta property="og:site_name" content="battleforthenet.com">
+		<meta property="og:site_name" content="events.battleforthenet.com">
 		<meta name="twitter:card" value="summary_large_image">
     {% else %}
 		<title>{% block title %}{{ page.title }} | {% filter ak_text:"org_name" %}{% client_name %}{% endfilter %}{% endblock %}</title>
@@ -70,23 +70,20 @@
     </div>
 
     <div class="ak-page-container">
-
         {% block content %}{% endblock %}
-
         <div class="ak-page-footer">
             <div class="ak-page-footer-contents">
-<a href="https://battleforthenet.com/" class="footer-pp-logo"><img src="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/team-internet.jpg" alt="Team Internet" /></a>
-<div class="footer-fineprint">
-<span>{% ifequal page.type "Unsubscribe" %}By submitting this form, you will be unsubscribed from People Power.{% else %}
-{% if not filename|split:'.'|nth:0 = "thanks" %}
-By submitting this form, you are agreeing to receive periodic updates from Demand Progress, Fight for the Future and Free Press.
-{% endif %}
-{% endifequal %}</span>
-<span>Contact us at <a href="mailto:team@fightforthefuture.org">team@fightforthefuture.org</a>.<br><a href="https://battleforthenet.com/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
-</div> <!-- .footer-fineprint -->
-</div> <!-- ak-page-footer-contents -->
-</div> <!-- .ak-page-footer -->
-
+                <a href="https://battleforthenet.com/" class="footer-pp-logo"><img src="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/team-internet.jpg" alt="Team Internet" /></a>
+                <div class="footer-fineprint">
+                <span>{% ifequal page.type "Unsubscribe" %}By submitting this form, you will be unsubscribed from Team Internet.{% else %}
+                {% if not filename|split:'.'|nth:0 = "thanks" %}
+                By submitting this form, you are agreeing to receive periodic updates from Demand Progress, Fight for the Future and Free Press.
+                {% endif %}
+                {% endifequal %}</span>
+                <span>Contact us at <a href="mailto:team@fightforthefuture.org">team@fightforthefuture.org</a>.<br><a href="https://battleforthenet.com/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
+                </div> <!-- .footer-fineprint -->
+            </div> <!-- ak-page-footer-contents -->
+        </div> <!-- .ak-page-footer -->
     </div>
 
     {% block below_form %}
