Update support email to support@demandprogress.org

--- a/wrapper.html
+++ b/wrapper.html
@@ -80,7 +80,7 @@
                 By submitting this form, you are agreeing to receive periodic updates from Demand Progress, Fight for the Future and Free Press.
                 {% endif %}
                 {% endifequal %}</span>
-                <span>Contact us at <a href="mailto:team@fightforthefuture.org">team@fightforthefuture.org</a>.<br><a href="https://battleforthenet.com/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
+                <span>Contact us at <a href="mailto:support@demandprogress.org">support@demandprogress.org</a>.<br><a href="https://battleforthenet.com/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
                 </div> <!-- .footer-fineprint -->
             </div> <!-- ak-page-footer-contents -->
         </div> <!-- .ak-page-footer -->
