--- a/event_attend.html
+++ b/event_attend.html
@@ -116,7 +116,9 @@
                         <h2>Sorry, this event was cancelled.</h2>
                     {% endif %}
                     {% if event.is_full %}
-                        <h2>Sorry, this event is full. <a href="https://map.peoplepower.org">Search for another event to attend</a>, or <a href="https://act.demandprogress.org/signup/host_new">host your own</a>.</h2><h4>If you have already signed up to attend this event, here are the basic details:</h4>
+                        <h2>Sorry, this event is full. <a href="https://events.battleforthenet.com">Search for another event to attend</a>, or
+                        <a href="https://act.demandprogress.org/event/team-internet/create/">host your own</a>.</h2>
+                        <h4>If you have already signed up to attend this event, here are the basic details:</h4>
                     <div id="event-search-results">
                     {% with 1 as hide_map %}
                     {% include "./event_search_results.html" %}
@@ -133,7 +135,7 @@
                     <h2>We&rsquo;ll confirm this event soon! Come back later.</h2>
                 {% endif %}
                 <div>
-                    <a href="https://events.battleforthenet.com/#zipcode={{args.zip}}&distance=50&sort=distance&f%5B%5D=launch">Search for another event</a>
+                    <a href="https://events.battleforthenet.com/#zipcode={{args.zip}}&distance=50&sort=distance&f%5B%5D=team-internet">Search for another event</a>
                 </div>
 
             </div>
