Add publicly visible note to event location on host event page

--- a/event_create.html
+++ b/event_create.html
@@ -127,6 +127,7 @@
 
             <div id="event-info">
                 <h3>Event location</h3>
+                <div>This will be publicly visible</div>
                 <div class="unknown_user">
                     <!--
                         This only shows if the user form includes all of the
