Info text below Event Information

--- a/event_create.html
+++ b/event_create.html
@@ -41,6 +41,7 @@
 
             <div id="ak-event-info">
                 <h3>Event information</h3>
+                <div>If you can commit to host a meeting at a Congressional office with your Member of Congress and/or their staff to express opposition to FCC Chairman Ajit Pai's plan to eliminate net neutrality protections, please indicate that here -- hosting these meetings is one of the most impactful things you can do to help stop the rollback of net neutrality.</div>
                 <div>
                     {% if campaign.use_title %}
                         <div>
