--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -1,4 +1,5 @@
 {{ templateset.custom_fields|load_json }}
+{{ event.custom_fields|load_json }}
 
 {% if templateset.custom_fields.event_categories and event.custom_fields.event_category %}
 <div class="ak-event-categories">
