--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -1,12 +1,13 @@
-fields = {{ event.fields }}
-custom fields = {{ event.custom_fields.categories }}
+event custom set = {{ event.custom_fields }}
+template custom fields = {{ templateset.custom_fields.categories }}
 
 {% if event.custom_fields.categories %}
 <div class="ak-event-categories">
-  {% for category in event.fields.categories|force_list %}
-  {{ category }},
-  <strong>{{ templateset.custom_fields.categories|load_json|nth:category|nth:"label"|default:category }}</strong>
-  {% if not forloop.last %}•{% endif %}
+  <strong>Event Type:</strong>
+  {% for category in event.fields.categories|split:"," %}
+    {{ category }},
+    <strong>{{ templateset.custom_fields.categories|load_json|nth:category|nth:"label"|default:category }}</strong>
+    {% if not forloop.last %}•{% endif %}
   {% endfor %}
 </div>
 {% endif %}
