--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -1,12 +1,8 @@
-event custom set = {{ event.custom_fields }}
-template custom fields = {{ templateset.custom_fields.categories|load_json }}
-
 {% if event.custom_fields.categories %}
 <div class="ak-event-categories">
   <strong>Event Type:</strong>
   {% for category in event.custom_fields.categories|split:"," %}
-    {{ category }},
-    <strong>{{ templateset.custom_fields.categories|load_json|category }}</strong>
+    <strong>{{ templateset.custom_fields.categories|load_json|nth:category }}</strong>
     {% if not forloop.last %}•{% endif %}
   {% endfor %}
 </div>
