--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -3,7 +3,7 @@
   <strong>Event Type:</strong>
   {% for category in event.custom_fields.categories|split:"," %}
     <strong>
-      {{ category }} {{ templateset.custom_fields.categories }}
+      {{ category }} {{ templateset.custom_fields.categories|load_json|nth:"meetinghouse" }}
     </strong>
     {% if not forloop.last %}•{% endif %}
   {% endfor %}
