Try to get categories to display on event pages

--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -1,7 +1,7 @@
 {% if event.custom_fields.categories %}
 <div class="ak-event-categories">
   <strong>Event Type:</strong>
-  {% with templateset.custom_fields.categories|load_json as all_categories %} {{ all_categories.meetinghouse }}
+  {% with templateset.fields.categories|load_json as all_categories %} {{ all_categories.meetinghouse }}
     {% for category in event.custom_fields.categories|split:"," %}
       <strong>
         {{ all_categories|nth:category }}
