--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -1,6 +1,8 @@
 {% if event.custom_fields.categories %}
 <div class="ak-event-categories">
   <strong>Event Type:</strong>
+  fields: {{ templateset.fields.categories }}
+  ciustom fields: {{ templateset.custom_fields.categories }}
   {% with templateset.fields.categories|load_json as all_categories %} {{ all_categories.meetinghouse }}
     {% for category in event.custom_fields.categories|split:"," %}
       <strong>
