--- a/event_custom_field_categories.html
+++ b/event_custom_field_categories.html
@@ -1,9 +1,8 @@
 {% if event.custom_fields.categories %}
 <div class="ak-event-categories">
   <strong>Event Type:</strong>
-  fields: {{ templateset.fields.categories }}
-  ciustom fields: {{ templateset.custom_fields.categories }}
-  {% with templateset.custom_fields.categories|load_json as all_categories %} {{ all_categories.meetinghouse }}
+  custom fields: {{ templateset.custom_fields.categories }}
+  {% with templateset.custom_fields.categories|load_json as all_categories %}
     {% for category in event.custom_fields.categories|split:"," %}
       <strong>
         {{ all_categories|nth:category }}
