--- a/petition.html
+++ b/petition.html
@@ -45,7 +45,7 @@
 
             <div class="statement-text-wrapper ak-field-box ak-field-box-borderless">
 
-                <h3>Sign the petition</h3>
+                <h3>Sign up here:</h3>
 
                 {% if page.custom_fields.featured_image or form.about_text %}
                            {% if form.statement_leadin %}
