Free Press should be Free Press Action Fund

--- a/wrapper.html
+++ b/wrapper.html
@@ -77,7 +77,7 @@
                 <div class="footer-fineprint">
                 <span>{% ifequal page.type "Unsubscribe" %}By submitting this form, you will be unsubscribed from Team Internet.{% else %}
                 {% if not filename|split:'.'|nth:0 = "thanks" %}
-                By submitting this form, you are agreeing to receive periodic updates from Demand Progress, Fight for the Future and Free Press.
+                By submitting this form, you are agreeing to receive periodic updates from Demand Progress, Fight for the Future and Free Press Action Fund.
                 {% endif %}
                 {% endifequal %}</span>
                 <span>Contact us at <a href="mailto:support@demandprogress.org">support@demandprogress.org</a>.<br><a href="https://battleforthenet.com/privacy/">{{ 'Privacy Policy'|ak_text:'privacy' }}</a></span>
