Clean up some remaining old People Power stuff
Especially the social sharing images

--- a/thanks.html
+++ b/thanks.html
@@ -68,7 +68,7 @@
 <div class="thanks-share-fb"><a class="buttonA3 icon-fb" href="/share/link?type=fb&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}" target="_blank"><span class="box"><span class="icon"></span>Post to Facebook</a></span></div>
 <div class="thanks-share-twitter"><a class="buttonA3 icon-twitter" href="/share/link?type=tw&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}" target="_blank"><span class="box"><span class="icon"></span>Share on Twitter</a></span></div>
 <!--
-<div class="thanks-share-getmap"><a class="buttonA3 icon-mapmarker" href="https://map.peoplepower.org/#zipcode={{ action.user.zip|urlencode }}&distance=20&sort=distance&f%5B%5D=launch" target="_blank"><span class="box"><span class="icon"></span>Find an Event</a></span></div>
+<div class="thanks-share-getmap"><a class="buttonA3 icon-mapmarker" href="https://events.battleforthenet.com/#zipcode={{ action.user.zip|urlencode }}&distance=20&sort=distance&f%5B%5D=launch" target="_blank"><span class="box"><span class="icon"></span>Find an Event</a></span></div>
             -->
 
             {% if page.followup.send_taf and args.taf %}
