--- a/wrapper.html
+++ b/wrapper.html
@@ -18,7 +18,7 @@
 
     {% if event.is_open_for_signup %}
 		<title>Team Internet Event in {{ event.city_etc_no_postal }}</title>
-		<meta property="og:image" content="https://s3.amazonaws.com/s3.peoplepower.org/images/peoplepower-rsvpsocial.png" />
+		<meta property="og:image" content="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/team-internet.jpg" />
 		<meta property="og:title" content="Join a Team Internet Event in {{ event.city_etc_no_postal }}" />
 		<meta name="description" property="og:description" content="The FCC wants to destroy net neutrality and give giant cable companies control over the Internet.">
 		<meta property="og:site_name" content="events.battleforthenet.com">
