--- a/user_view.html
+++ b/user_view.html
@@ -33,32 +33,22 @@
         {% record actionkit_user.id in user_dict %}
         {% record '"}' in user_dict %}
         {% with user_dict|join:""|load_json as user_dict %}
-        {% withevents with "action" as campaign user_dict as host %}
+        {% withevents with "team-internet" as campaign user_dict as host %}
         {% if events %}
         <h3>Events You're Hosting</h3>
         <ul class="ak-margin-none">
         {% for event in events %}
-          <li><a href="/event/action/{{ event.id }}/host">{{ event.title }} ({% if event.obj.is_in_past %}occurred on {{ event.starts_at_full }}{% else %}{{ event.starts_at }}{% endif %})</a></li>
+          <li><a href="/event/team-internet/{{ event.id }}/host">{{ event.title }} ({% if event.obj.is_in_past %}occurred on {{ event.starts_at_full }}{% else %}{{ event.starts_at }}{% endif %})</a></li>
         {% endfor %}
         </ul>
         {% else %}
-        <form method="GET" action="https://go.peoplepower.org/event/action/create">
+        <form method="GET" action="https://act.demandprogress.org/event/team-internet/create/">
           <input type="hidden" name="source" value="akuserdash">
-          <input type="submit" class="ak-submit-button" value="Create a People Power action event!">
+          <input type="submit" class="ak-submit-button" value="Create a Team Internet event!">
         </form>
         {% endif %}
         {% endwithevents %}
 
-        {% withevents with "launch" as campaign user_dict as host %}
-        {% if events %}
-        <h3>Your Resistance Training livestream</h3>
-        <ul class="ak-margin-none">
-        {% for event in events %}
-          <li><a href="/event/launch/{{ event.id }}/host">{{ event.title }} ({% if event.obj.is_in_past %}occurred on {{ event.starts_at_full }}{% else %}{{ event.starts_at }}{% endif %})</a></li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwithevents %}
         {% endwith %}
 
         <h3> Subscription History </h3>
