--- a/wrapper.html
+++ b/wrapper.html
@@ -6,12 +6,12 @@
     <script>startTime=new Date()</script>
     <meta name="application-name" content="Team Internet"/>
 
-    <link rel="shortcut icon" type="image/x-icon" href="https://peoplepower.org/assets/favicon.ico" />
-    <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="https://peoplepower.org/assets/favicon-128.png" sizes="128x128" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.ico" />
+    <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet150x150.jpg" sizes="196x196" />
+    <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet100x100.jpg" sizes="96x96" />
+    <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.jpg" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet75x75.jpg" sizes="16x16" />
+    <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/teaminternet-map-prod/images/teaminternet100x100.jpg" sizes="128x128" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
