--- a/event_email_cancelled.html
+++ b/event_email_cancelled.html
@@ -8,7 +8,7 @@ Subject: {% if user.id == event.creator.id and "moderation_not_approved"|is_in:e
 
 <ul>
   <li>
-    PeoplePower.org is nonpartisan. If your event refers to defeating or electing candidates for office or promoting a political party it can’t be approved. Candidates for office and political parties can post events if the focus is on organizing resistance to Trump’s agenda as opposed to electioneering.
+    Team Internet is nonpartisan. If your event refers to defeating or electing candidates for office or promoting a political party it can’t be approved. Candidates for office and political parties can post events if the focus is on fighting for Net Neutrality as opposed to electioneering.
   </li>
   <li>
     We don’t post generic meetings or events. Event descriptions should specify opposition or support to policies or an agenda.
@@ -39,7 +39,7 @@ Subject: {% if user.id == event.creator.id and "moderation_not_approved"|is_in:e
 <p>
   Events Team
   <br>
-  People Power
+  Team Internet
 </p>
 
 {% else %}
