--- a/petition.html
+++ b/petition.html
@@ -61,14 +61,10 @@
 
                 <div id="petition-form" class="ak-styled-fields {{templateset.custom_fields.field_labels_class|default:"ak-labels-overlaid"}} {{templateset.custom_fields.field_errors_class|default:"ak-errs-below"}}">
                     {% include "./user_form_wrapper.html" %}
-                    <div class="ak-field">
-                        <label for="id_comment">Comment</label>
-                        <textarea id="id_comment" name="action_comment"></textarea>
-                    </div>
 
                     {# Optional TAF {% include "./inline_tellafriend.html" %} #}
 
-                    <button type="submit" class="ak-submit-button">Sign</button>
+                    <button type="submit" class="ak-submit-button">Sign Up</button>
                 </div>
 
             </div>
