--- a/event_attend.html
+++ b/event_attend.html
@@ -91,8 +91,13 @@
                     {% endif %}
                     <div>
 
-                    hello
-                    {% for category in event.custom_fields.event_category|force_list %}action_event_category={{ category }}{% endfor %}
+                    {% for category in event.custom_fields.categories|split:"," %}
+                        {% ifequal category, "meetinghouse" %}
+                            Drop-in
+                        {% else %}
+                            Not drop-in
+                        {% endif %}
+                    {% endfor %}
 
                     <button type="submit" class="ak-submit-button">{% if update %}Update RSVP{% else %}RSVP to attend{% endif %}</button>
                     </div>
