--- a/event_attend.html
+++ b/event_attend.html
@@ -96,7 +96,7 @@
                             Drop-in
                         {% else %}
                             Not drop-in
-                        {% endif %}
+                        {% endifequal %}
                     {% endfor %}
 
                     <button type="submit" class="ak-submit-button">{% if update %}Update RSVP{% else %}RSVP to attend{% endif %}</button>
