Update text about drop-ins

--- a/event_attend.html
+++ b/event_attend.html
@@ -93,7 +93,7 @@
 
                     {% for category in event.custom_fields.categories|split:"," %}
                         {% ifequal category "meetinghouse" %}
-                            <b>* You are RSVP-ing to a drop-in meeting. This means you and others are stopping by the office to share your feelings on the importance of net neutrality and a free and open internet.</b>
+                            <b>* You are RSVP-ing to a drop-in meeting. This means you and others are stopping by the office to share your feelings on the importance of Net Neutrality and a free and open internet. Office staff will not necessarily be expecting you -- but this is fine, and you should insist on making known your concerns about net neutrality.</b>
                         {% endifequal %}
                     {% endfor %}
 
