--- a/event_create.html
+++ b/event_create.html
@@ -198,6 +198,8 @@
                     </label>
                     <textarea id="id_event_public_description" name="event_public_description">
 A drop-in at [insert your lawmakers name]’s office to discuss the importance of strong net neutrality protections.
+
+Join other Team Internet members to discuss the importance of strong net neutrality protections. We are doing our best to give staff a heads-up, but if they seem surprised to see you, please still discuss the importance of net neutrality.
                     </textarea>
                 </div>
 
