--- a/event_create.html
+++ b/event_create.html
@@ -130,7 +130,7 @@
                 <h3>Tell us where your drop-in is so others can join you!</h3>
                 <div>This will be publicly visible</div>
                 <p>
-                <div>Tell us where your drop-in visit is so others can join you!/div>
+                <div>Tell us where your drop-in visit is so others can join you!</div>
                 <div>What’s the closest Congressional office to you? You can get the contact info for House representatives <a href='https://www.govtrack.us/congress/members'>here</a> and for senators <a href='https://docs.google.com/spreadsheets/d/1BkmbYX3UvEMJ6_r9TsBBaHxlWjzEkT-Hq2mL8KWiIN8/edit#gid=0'>here</a> if you’re not sure. Then input the office address closest to you.</div>
                 <div class="unknown_user">
                     <!--
