--- a/event_create.html
+++ b/event_create.html
@@ -131,7 +131,7 @@
                 <div>This will be publicly visible</div>
                 <p>
                 <div>Tell us where your drop-in visit is so others can join you!</div>
-                <div>What’s the closest Congressional office to you? You can get the contact info for House representatives <a href='https://www.govtrack.us/congress/members'>here</a> and for senators <a href='https://docs.google.com/spreadsheets/d/1BkmbYX3UvEMJ6_r9TsBBaHxlWjzEkT-Hq2mL8KWiIN8/edit#gid=0'>here</a> if you’re not sure. Then input the office address closest to you.</div>
+                <div>What’s the closest Congressional office to you? You can find the <a href='https://docs.google.com/spreadsheets/d/12s8pu0v9F-Q5oWlnlopRtrUYTWQLTOkmbXkPmxOiURY/edit#gid=249647634'>address and contact info for your Member of Congress’ office here</a>. Then input the office address closest to you.</div>
                 <div class="unknown_user">
                     <!--
                         This only shows if the user form includes all of the
